k8s/production/spack/spackbot-spack-io/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spackbot-spack-io
  namespace: spack
  labels:
    app: spackbot-spack-io
    svc: web
spec:
  selector:
    matchLabels:
      app: spackbot-spack-io
      svc: web
  replicas: 2
  template:
    metadata:
      labels:
        app: spackbot-spack-io
        svc: web
    spec:
      containers:
      - name: web
        image: "ghcr.io/spack/spack-bot:latest"
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 110m
            memory: 200M
        ports:
        - name: http
          containerPort: 8080
      nodeSelector:
        spack.io/node-pool: base

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spackbot-workers
  namespace: spack
  labels:
    app: spackbot-workers
    svc: workers
spec:
  selector:
    matchLabels:
      app: spackbot-workers
      svc: workers
  replicas: 1
  template:
    metadata:
      labels:
        app: spackbot-workers
        svc: workers
    spec:
      serviceAccountName: spackbot-spack-io
      containers:
      - name: worker
        image: "ghcr.io/spack/spackbot-workers:latest"
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 1500m
            memory: 1G
        # Mount secrets to non-existing location
        volumeMounts:
        - mountPath: "/git_rsa"
          name: spack-bot-idrsa
          readOnly: true
      volumes:
      - name: spack-bot-idrsa
        secret:
          secretName: spack-bot-idrsa
          defaultMode: 0600
      nodeSelector:
        spack.io/node-pool: base

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spackbot-lworkers
  namespace: spack
  labels:
    app: spackbot-lworkers
    svc: workers
spec:
  selector:
    matchLabels:
      app: spackbot-lworkers
      svc: workers
  # replicas cannot exceed 1 until
  # rq jobs can be properly sync'd
  replicas: 1
  template:
    metadata:
      labels:
        app: spackbot-lworkers
        svc: workers
    spec:
      serviceAccountName: spackbot-spack-io
      containers:
      - name: long-task-worker
        image: "ghcr.io/spack/spackbot-workers:latest"
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 1500m
            memory: 1G
        # Mount secrets to non-existing location
        volumeMounts:
        - mountPath: "/git_rsa"
          name: spack-bot-idrsa
          readOnly: true
      volumes:
      - name: spack-bot-idrsa
        secret:
          secretName: spack-bot-idrsa
          defaultMode: 0600
      nodeSelector:
        spack.io/node-pool: base
